smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/control-with-invalid-text-block-key.smithy
// Syntax error at line 2, column 2: Expected one of IDENTIFIER, STRING('"'); but found TEXT_BLOCK('"""\nfoo"""') | Model
$"""
foo""": "1.0"
